Galene 0.5.6 (unreleased):

  * Rework the peer-to-peer file transfer protocol.  It now lives in
    protocol.js, which makes it easy to use by third-party clients.
  * Extend the authorization protocol to allow the authorization server to
    request that the client fall back to password authorization.
  * Make it possible to run the web server on a Unix domain socket.
    Thanks to Martin Pépin.
  * Check that a given group exists before redirecting from the landing
    page.  This avoids an unsightly 404 error when the user makes a typo.

23 July 2022: Galene 0.5.5

  * Fix a longstanding bug with time conversion that would occasionally
    cause us to miscalculate rates and send incorrect sender reports.
    Thanks to lamhai1401.
  * Update srtp to a version that includes Adrian Cable's optimisations.
    This should yield a 10% to 20% improvement for AES-CTR (but modern
    browsers use GCM).
  * Reword the Safari warning to be more frightening, since screensharing
    on Safari tends to get stuck.

5 May 2022: Galene 0.5.4

  * Fix username check when a token is present.
  * Improve the performance of AES in CTR mode.
  * Tweak detection of keyframes with H.264.

25 April 2022: Galene 0.5.3

  * Remove a forgotten "replace" that prevented 0.5.2 from compiling
    unless "pion/ice" was downloaded manually.
  * Fix a race condition in the rate estimator.
  * Update pion/ice to a version that handles aggressive nomination; this
    avoids broken connection in some (fairly rare) cases.

20 April 2022: Galene 0.5.2

  * Implement audio-video sync in the diskwriter.
  * Fix setting of the keyframe flag in audio samples in diskwriter.
  * Don't use high-quality audio for screenshare by default, obey the
    hqaudio preference in all cases.
  * Maintain user information for oneself, not just other users.
  * Call the onuser callback when a user deletes a stream.

25 March 2022: Galene 0.5.1

  * Enable simulcast on Firefox.
  * Fix rate control on Firefox.